# sm

./: .gitignore  README.md  smart-hire-each-specs.code-workspace
smarthire-backend/: .env.example  .gitignore  Dockerfile  alembic.ini  check_slots.py  check_status.py  check_tables.py  docker-compose.yml  pyproject.toml  seed_shortlist.py
smarthire-backend/.github/: copilot-instructions.md
smarthire-backend/.specify/: feature.json
smarthire-backend/.specify/extensions/: .registry
smarthire-backend/.specify/integrations/: copilot.manifest.json  speckit.manifest.json
smarthire-backend/.specify/memory/: constitution.md
smarthire-backend/.specify/templates/: plan-template.md  tasks-template.md
smarthire-backend/.specify/workflows/: workflow-registry.json
smarthire-backend/alembic/: env.py
smarthire-backend/alembic/versions/: 77a45d1bce33_initial_schema.py
smarthire-backend/docker/: init.sql
smarthire-backend/docs/: 00-project-overview.md  01-auth-security.md  01-authentication-authorization.md  02-candidate-management.md  02-candidate-managements.md  03-demand-screen.md  03-interviewer-module.md  04-bench-screen.md  04-recruiter-module.md  05-slot-booking.md  05-supply-screen.md  06-feedback-forms.md  06-interview-scheduling-calendar.md  07-alerts-notifications.md  07-workflow-offer-management.md  08-reports-analytics.md  08-reports.md  09-admin-master-data.md  09-lookup-configuration.md  10-feedback-management.md  10-user-registration-roles.md  11-login-session.md  11-referral-management.md  12-keycloak-integration.md  12-recruiter-todo-dashboard.md  13-export-file-management.md  13-teams-meeting.md  14-email-notifications-cron-jobs.md  14-file-management.md  15-data-models.md  15-prescreen.md  16-referral-candidate.md  17-data-models.md  19-api-contract.md
smarthire-backend/specs/001-smarthire-backend-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
smarthire-backend/specs/001-smarthire-backend-platform/checklists/: requirements.md
smarthire-backend/specs/001-smarthire-backend-platform/contracts/: openapi.yaml
smarthire-backend/src/smarthire/: __init__.py  config.py  database.py  main.py
smarthire-backend/src/smarthire/auth/: __init__.py  dependencies.py  jwt.py
smarthire-backend/tests/: conftest.py
smarthire-backend/tests/contract/: __init__.py  test_openapi.py
smarthire-backend/tests/integration/: test_auth.py  test_candidate.py  test_scheduling.py
smarthire-backend/tests/unit/: test_jwt.py
(+321 files in other folders)
