[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smarthire"
version = "1.0.0"
description = "SmartHire internal recruitment management platform backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    # Settings / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    # AWS
    "boto3>=1.34.0",
    # HTTP client
    "httpx>=0.27.0",
    # Excel
    "openpyxl>=3.1.2",
    # PDF
    "reportlab>=4.2.0",
    # Scheduler
    "APScheduler>=3.10.4",
    # File upload
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "types-boto3>=1.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff — linting
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["smarthire"]

# ---------------------------------------------------------------------------
# Black — formatting
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jose.*", "reportlab.*", "openpyxl.*", "APScheduler.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
